--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+
+node_modules
+*.env
+*.idea
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
