--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "axios": "^0.19.2",
         "immer": "^6.0.1",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
@@ -40,5 +41,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "proxy": "http://localhost:4000/"
 }
