--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "immer": "^6.0.1",
+    "material-auto-rotating-carousel": "latest",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
@@ -19,8 +21,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.0.1",
-    "material-auto-rotating-carousel": "latest"
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
