--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "immer": "^6.0.1",
     "material-auto-rotating-carousel": "latest",
     "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.27.0",
     "qs": "^6.9.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
