--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "classnames": "^2.2.6",
     "immer": "^6.0.1",
     "material-auto-rotating-carousel": "latest",
+    "nuka-carousel": "^4.6.6",
     "prop-types": "^15.7.2",
     "pure-react-carousel": "^1.27.0",
     "qs": "^6.9.3",
     "react": "^16.13.0",
+    "react-daum-postcode": "^1.8.4",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
