--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "clsx": "^1.1.0",
     "immer": "^6.0.1",
     "material-auto-rotating-carousel": "latest",
     "nuka-carousel": "^4.6.6",
