--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-daum-postcode": "^1.8.4",
     "react-dom": "^16.13.1",
     "react-horizontal-scrolling-menu": "^0.7.7",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
