--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "clsx": "^1.1.0",
     "immer": "^6.0.1",
+    "lodash": "^4.17.15",
     "material-auto-rotating-carousel": "latest",
     "nuka-carousel": "^4.6.6",
     "prop-types": "^15.7.2",
@@ -31,7 +32,8 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
